--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "workfly-backend",
   "version": "1.0.0",
+  "type": "module",
   "description": "Workfly API server",
   "main": "dist/main.js",
   "scripts": {
